@@ -1,3 +1,7 @@
+2012-06-05  Michael Meissner  <meissner@linux.vnet.ibm.com>
+
+	* gcc.target/powerpc/pr53487.c: New test.
+
 2012-04-24  Andrew Pinski  <apinski@cavium.com>
 
 	PR tree-opt/33512
